Subiendo archivos Styles.css y index.html con sus imagenes del Centro Recreacional ADSO

--- a/index.html
+++ b/index.html
@@ -28,24 +28,23 @@
       <a href="#zonas" class="btn">Explorar Zonas</a>
     </section>
 
-    <section id="zonas" class="zonas">
-      <h2>Zonas Temáticas</h2>
-      <div class="zonas-grid">
-        <div class="zona">
-          <h3>Niños</h3>
-          <p>Parques, juegos y actividades seguras y educativas.</p>
-        </div>
-        <div class="zona">
-          <h3>Adolescentes</h3>
-          <p>Espacios deportivos, videojuegos y actividades interactivas.</p>
-        </div>
-        <div class="zona">
-          <h3>Adultos</h3>
-          <p>Zonas de descanso, gimnasio, restaurante y entretenimiento.</p>
-        </div>
-      </div>
-    </section>
-  </main>
+  <div class="zonas-grid">
+  <div class="zona">
+    <img src="zona-ninos.jpg" alt="Zona Niños">
+    <h3>Niños</h3>
+    <p>Parques, juegos y actividades seguras y educativas.</p>
+  </div>
+  <div class="zona">
+    <img src="zona-adulto.jpg" alt="Zona Adolescentes">
+    <h3>Adolescentes</h3>
+    <p>Espacios deportivos, videojuegos y actividades interactivas.</p>
+  </div>
+  <div class="zona">
+    <img src="zona-adulto.jpg" alt="Zona Adultos">
+    <h3>Adultos</h3>
+    <p>Zonas de descanso, gimnasio, restaurante y entretenimiento.</p>
+  </div>
+</div>
 
   <footer>
     <p>&copy; 2025 Centro Recreacional ADSO | Diseñado por Jorge Alberto Ballestas Morales</p>
